Trazendo as coisas do drive , safetensors, logs e config

--- a/SegundaApresentação/lora.ipynb
+++ b/SegundaApresentação/lora.ipynb
@@ -3,18 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132cf46d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "LoRA de Estilo Pré-treinada - Aqui usamos uma LoRA já treinada, em um pipeline base, para \"fine-tunar\" o modelo, ou seja, usamos um pequeno modelo específico para permitir que um estilo que não tá no modelo seja exportado no artefato.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "606338c2",
    "metadata": {},
    "outputs": [],
@@ -25,14 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7ab600f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from diffusers import DiffusionPipeline\n",
-    "from PIL import Image"
+    "from diffusers import DiffusionPipeline"
    ]
   },
   {
